[gd_scene load_steps=5 format=3 uid="uid://e6jvaai0jg54"]

[ext_resource type="Script" path="res://zenva_mobile.gd" id="1_5gq3b"]
[ext_resource type="Theme" uid="uid://x1d3wb2rvq3n" path="res://assets/zenva_mobile.tres" id="2_hxdkh"]

[sub_resource type="InputEventAction" id="InputEventAction_c1rq2"]
action = &"increase"

[sub_resource type="Shortcut" id="Shortcut_aj2eo"]
events = [SubResource("InputEventAction_c1rq2")]

[node name="ZenvaMobile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5gq3b")

[node name="IncreaseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -48.0
offset_right = 160.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_hxdkh")
shortcut = SubResource("Shortcut_aj2eo")
text = " iNCREASE"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = 32.0
offset_right = 116.0
offset_bottom = 86.0
grow_horizontal = 2
theme = ExtResource("2_hxdkh")
text = "Score: 0"

[node name="AimScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_top = 96.0
offset_right = 111.0
offset_bottom = 132.0
grow_horizontal = 2
theme = ExtResource("2_hxdkh")
theme_override_font_sizes/font_size = 32
text = "Aim Score: 0"

[node name="TimeLeftLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -177.5
offset_top = -86.0
offset_right = 177.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_hxdkh")
text = "Time Left: 0s"

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="IncreaseButton" to="." method="_on_increase_button_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
